Table "user" {
  "uuid" uuid [pk, not null]
  "name" text [not null]
  "created_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "login_id" text [not null]
  "password" text [not null]
  "gender" text
  "age_range" text

  Indexes {
    login_id [unique, name: "user_loginId_key"]
    name [unique, name: "user_name_key"]
  }
}

Table "post" {
  "id" serial [pk, increment]
  "views" integer [not null, default: 0]
  "created_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" timestamp(3)
  "author_id" uuid [not null]
}

Table "file" {
  "uuid" text [pk, not null]
  "name" text [not null]
  "created_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "url" text [not null]
  "post_id" integer [not null]
  "order" integer [not null, default: 0]
}

Table "content" {
  "title" text [not null]
  "body" text [not null]
  "created_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "post_id" integer [pk, not null]
}

Table "lookbook" {
  "id" serial [pk, increment]
  "created_at" timestamp(3) [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" timestamp(3)
  "author_id" uuid [not null]
  "prompt" text [not null]
  "imageUrl" text [not null]
}

Ref:"user"."uuid" < "post"."author_id" [update: cascade, delete: restrict]

Ref:"post"."id" < "file"."post_id" [update: cascade, delete: restrict]

Ref:"post"."id" < "content"."post_id" [update: cascade, delete: restrict]

Ref:"user"."uuid" < "lookbook"."author_id" [update: cascade, delete: restrict]
